CopadoDXDemoBasics/main/default/objects/Copado_DX_Demo__c/Copado_DX_Demo__c.object-meta.xml
<CustomObject>
    <label>Copado DX Demo</label>
    <nameField>
        <displayFormat>CDX-{00000}</displayFormat>
        <label>Copado DX Demo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copado DX Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>