CopadoDXDemoBasics/main/default/objects/Copado_DX_Demo__c/fields/Demo_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_Time__c</fullName>
    <label>Demo Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>