CopadoDXDemoBasics/main/default/objects/Copado_DX_Demo__c/fields/Technical_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Technical_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Copado_DX_Demos</relationshipName>
    <type>Lookup</type>
</CustomField>