CopadoDXDemoBasics/main/default/objects/Copado_DX_Demo__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Copado DX Demos</relationshipLabel>
    <relationshipName>Copado_DX_Demos</relationshipName>
    <type>Lookup</type>
</CustomField>